--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT = 8000
 MONGODBCONNECT_URL = mongodb+srv://vipinnagar8700:vipinnagar8700@cluster0.ztcaiie.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET = mySecret
+JWT_SECRET = "mySecret"
 CLOUD_NAME = 'durzgbfjf'
 API_KEY = '512412315723482'
 API_SECRET = 'e3kLlh_vO5XhMBCMoIjkbZHjazo'
+APIURL = http://localhost:8000
